<?xml version="1.0"?>
<package>
  <name>ros_topology_msgs</name>
  <version>0.0.1</version>
  <description>Messages describing the topology of the ros graph.</description>
  <maintainer email="dan@osrfoundation.org">Dan Brooks</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/ros_topology_msgs</url> -->
  <author>Dan Brooks</author> 

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
